--- a/api/app-auth/auth-server/auth-server-application/pom.xml
+++ b/api/app-auth/auth-server/auth-server-application/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>auth-server</artifactId>
-        <version>2.2.1-SNAPSHOT</version>
+        <version>2.2.1</version>
     </parent>
 
     <artifactId>auth-server-application</artifactId>
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>auth-server-infrastructure</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.1</version>
         </dependency>
     </dependencies>
 </project>
