--- a/api/app-framework-all/app-aop-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-aop-spring-boot-starter/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-framework-all</artifactId>
-        <version>2.2.1-SNAPSHOT</version>
+        <version>2.2.1</version>
     </parent>
 
     <groupId>org.hzz.aop</groupId>
@@ -22,12 +20,12 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-convention-spring-boot-starter</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-security-spring-boot-starter</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
