--- a/api/app-framework-all/pom.xml
+++ b/api/app-framework-all/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>api</artifactId>
-        <version>2.2.1-SNAPSHOT</version>
+        <version>2.2.1</version>
     </parent>
 
     <artifactId>app-framework-all</artifactId>
