--- a/api/app-learning/learning-application/pom.xml
+++ b/api/app-learning/learning-application/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-learning</artifactId>
-        <version>2.2.1-SNAPSHOT</version>
+        <version>2.2.1</version>
     </parent>
 
     <artifactId>learning-application</artifactId>
@@ -21,22 +19,22 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>learning-infrastructure</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>learning-trigger</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-designpattern-spring-boot-starter</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.hzz.fastjson2</groupId>
             <artifactId>app-fastjson2-spring-boot-starter</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.1</version>
         </dependency>
     </dependencies>
 
