--- a/api/app-course/course-application/pom.xml
+++ b/api/app-course/course-application/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz.course</groupId>
         <artifactId>app-course</artifactId>
-        <version>2.2.1</version>
+        <version>2.2.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>course-application</artifactId>
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.hzz.course</groupId>
             <artifactId>course-infrastructure</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
