--- a/api/app-learning/learning-trigger/pom.xml
+++ b/api/app-learning/learning-trigger/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-learning</artifactId>
-        <version>2.2.1</version>
+        <version>2.2.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>learning-trigger</artifactId>
@@ -22,22 +22,22 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>learning-domain</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>learning-types</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>order-types</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-rabbitmq-spring-boot-starter</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
         </dependency>
         <!--   自身模块end     -->
     </dependencies>
