--- a/api/app-learning/learning-types/pom.xml
+++ b/api/app-learning/learning-types/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-learning</artifactId>
-        <version>2.2.1</version>
+        <version>2.2.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>learning-types</artifactId>
