--- a/api/app-main/pom.xml
+++ b/api/app-main/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>api</artifactId>
-        <version>2.2.1</version>
+        <version>2.2.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>app-main</artifactId>
-    <version>2.2.1</version>
+    <version>2.2.2-SNAPSHOT</version>
 
     <properties>
         <start.class>org.hzz.AppMain</start.class>
@@ -22,22 +22,22 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-web-spring-boot-starter</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>auth-server-interface</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>learning-interface</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz.course</groupId>
             <artifactId>course-interface</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2-SNAPSHOT</version>
         </dependency>
         <!--   自身依赖End     -->
         <dependency>
