--- a/api/app-learning/learning-types/pom.xml
+++ b/api/app-learning/learning-types/pom.xml
@@ -15,4 +15,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-convention-spring-boot-starter</artifactId>
+            <version>2.2.2-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
