--- a/api/app-learning/learning-domain/pom.xml
+++ b/api/app-learning/learning-domain/pom.xml
@@ -22,6 +22,11 @@
             <version>2.2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.hzz.common</groupId>
+            <artifactId>app-common-spring-boot-starter</artifactId>
+            <version>2.2.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-ddd-framework-core</artifactId>
             <version>2.2.2-SNAPSHOT</version>
