--- a/api/app-framework-all/app-cache-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-cache-spring-boot-starter/pom.xml
@@ -26,6 +26,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2-extension-spring6</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
