--- a/api/app-remark/remark-domain/pom.xml
+++ b/api/app-remark/remark-domain/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>app-convention-spring-boot-starter</artifactId>
             <version>2.2.4-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-ddd-framework-core</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
