--- a/api/app-remark/remark-domain/pom.xml
+++ b/api/app-remark/remark-domain/pom.xml
@@ -39,6 +39,10 @@
             <artifactId>app-rabbitmq-spring-boot-starter</artifactId>
             <version>2.2.4-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
