--- a/api/app-remark/remark-trigger/pom.xml
+++ b/api/app-remark/remark-trigger/pom.xml
@@ -4,23 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.hzz</groupId>
-        <artifactId>api</artifactId>
+        <groupId>org.hzz.remark</groupId>
+        <artifactId>app-remark</artifactId>
         <version>2.2.4-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.hzz.remark</groupId>
-    <artifactId>app-remark</artifactId>
-    <packaging>pom</packaging>
-    <description>点赞业务</description>
-    <modules>
-        <module>remark-application</module>
-        <module>remark-interface</module>
-        <module>remark-types</module>
-        <module>remark-domain</module>
-        <module>remark-infrastructure</module>
-        <module>remark-trigger</module>
-    </modules>
+    <groupId>org.hzz.remark.trigger</groupId>
+    <artifactId>remark-trigger</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
