--- a/api/app-remark/remark-interface/pom.xml
+++ b/api/app-remark/remark-interface/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>remark-application</artifactId>
             <version>2.2.4-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-security-spring-boot-starter</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
