--- a/api/app-remark/remark-types/pom.xml
+++ b/api/app-remark/remark-types/pom.xml
@@ -24,5 +24,10 @@
             <artifactId>app-convention-spring-boot-starter</artifactId>
             <version>2.2.4-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz.fastjson2</groupId>
+            <artifactId>app-fastjson2-spring-boot-starter</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
