--- a/api/app-learning/learning-application/pom.xml
+++ b/api/app-learning/learning-application/pom.xml
@@ -32,6 +32,11 @@
             <version>2.2.4-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.hzz.remark.domain</groupId>
+            <artifactId>remark-domain</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-designpattern-spring-boot-starter</artifactId>
             <version>2.2.4-SNAPSHOT</version>
