--- a/api/app-remark/remark-domain/pom.xml
+++ b/api/app-remark/remark-domain/pom.xml
@@ -40,6 +40,11 @@
             <version>2.2.4-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.hzz.cache</groupId>
+            <artifactId>app-cache-spring-boot-starter</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
         </dependency>
