--- a/api/app-points/points-types/pom.xml
+++ b/api/app-points/points-types/pom.xml
@@ -4,22 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.hzz</groupId>
-        <artifactId>api</artifactId>
+        <groupId>org.hzz.points</groupId>
+        <artifactId>app-points</artifactId>
         <version>2.2.4-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.hzz.points</groupId>
-    <artifactId>app-points</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>points-interface</module>
-        <module>points-application</module>
-        <module>points-domain</module>
-        <module>points-infrastructure</module>
-        <module>points-types</module>
-    </modules>
-    <description>积分系统</description>
+    <groupId>org.hzz.points.types</groupId>
+    <artifactId>points-types</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
