--- a/api/app-points/points-application/pom.xml
+++ b/api/app-points/points-application/pom.xml
@@ -18,4 +18,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.hzz.points.infrastructure</groupId>
+            <artifactId>points-infrastructure</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
