--- a/api/app-points/points-domain/pom.xml
+++ b/api/app-points/points-domain/pom.xml
@@ -18,4 +18,22 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.hzz.points.types</groupId>
+            <artifactId>points-types</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-convention-spring-boot-starter</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-ddd-framework-core</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
