--- a/api/app-points/points-interface/pom.xml
+++ b/api/app-points/points-interface/pom.xml
@@ -18,4 +18,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.hzz.points.application</groupId>
+            <artifactId>points-application</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
