--- a/api/app-points/points-infrastructure/pom.xml
+++ b/api/app-points/points-infrastructure/pom.xml
@@ -24,5 +24,10 @@
             <artifactId>points-domain</artifactId>
             <version>2.2.4-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-mybatis-spring-boot-starter</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
