--- a/api/app-framework-all/app-mybatis-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-mybatis-spring-boot-starter/pom.xml
@@ -38,6 +38,10 @@
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis.dynamic-sql</groupId>
+            <artifactId>mybatis-dynamic-sql</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
