--- a/api/app-points/points-domain/pom.xml
+++ b/api/app-points/points-domain/pom.xml
@@ -36,6 +36,11 @@
             <version>2.2.4-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-rabbitmq-spring-boot-starter</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.hzz.cache</groupId>
             <artifactId>app-cache-spring-boot-starter</artifactId>
             <version>2.2.4-SNAPSHOT</version>
