--- a/api/app-points/points-domain/pom.xml
+++ b/api/app-points/points-domain/pom.xml
@@ -26,6 +26,11 @@
             <version>2.2.4-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.hzz.cache</groupId>
+            <artifactId>points-cache</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-convention-spring-boot-starter</artifactId>
             <version>2.2.4-SNAPSHOT</version>
